--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,11 @@
 body {
-    background-color: midnightblue;
+    background-color: rgb(125, 89, 160);
 
 }
 footer {
-    background-color: cornflowerblue;
-    color: ivory;
+    background-color: rgb(231, 151, 255);
+    color: rgb(0, 0, 0);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
