--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,40 @@
 body {
     background-color: rgb(125, 89, 160);
-
+    font-family: bai jamjuree;
 }
+
+#container{
+    display: flex;
+}
+
+.cartao{
+    margin: 1rem 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 footer {
     background-color: rgb(231, 151, 255);
     color: rgb(0, 0, 0);
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 2rem;
+}
+
+footer p {
+    text-align: center;
+    font-size: 0.8rem;
+    margin-top: 0.5rem;
+
+
 }
